change text birthday

--- a/facebook/face.html
+++ b/facebook/face.html
@@ -41,7 +41,7 @@
                    <input class="password" type="password" name="" placeholder="Password">
                    <input class="password2" type="password" name="" placeholder="Confirm  Password">
                </div>
-               <p class="birthday">Birthday</p>
+               <p class="birthday">Date Of Birthday</p>
            </form>
        </div>
        
